# sqlite-msgpack

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
cmake/: run_bench_readme.cmake  run_size_readme.cmake  run_sql_test.cmake
docs/: cpp-api.md  proposal-schema-validate.md  schema-validation.md
include/: msgpack_blob.hpp  sqlite3.h
src/: msgpack.c  msgpack_blob.cpp
tests/: bench_msgpack_vs_json.c  bench_size_comparison.c  fuzz_blob_corpus_runner.cpp  fuzz_corpus_runner.c  fuzz_msgpack.c  fuzz_msgpack_blob.cpp  msgpack01.test  test_interop.cpp  test_msgpack.c  test_msgpack_blob.cpp  test_spec_p10_timestamp.c  test_spec_p1_ints.c  test_spec_p2_scalars.c  test_spec_p3_containers.c  test_spec_p4_extract.c  test_spec_p5_mutation.c  test_spec_p6_json.c  test_spec_p7_agg_vtab.c  test_spec_p8_schema.c  test_spec_p9_typed_primitives.c
tests/fuzz_corpus/: deep_json.txt  valid_json_arr.txt
tools/: gen_bench_graph.py  gen_size_graph.py
